# azure-orbital-space-sdk

./: .gitignore  CONTRIBUTING.md  LEGAL.md  README.md
.devcontainer/: devcontainer.json
.devcontainer/app-dotnet-starter/: devcontainer.json
.devcontainer/app-imagin-e-starter/: devcontainer.json
.devcontainer/app-python-shipdetector-onnx/: devcontainer.json
.devcontainer/app-python-shipdetector-phi-3-onnx/: devcontainer.json  postStart.sh
.devcontainer/app-python-starter/: devcontainer.json
.devcontainer/base-host-platform/: devcontainer.json
.devcontainer/hostsvc-link-starter-plugin/: devcontainer.json
.devcontainer/hostsvc-logging-starter-plugin/: devcontainer.json
.devcontainer/hostsvc-position-starter-plugin/: devcontainer.json
.devcontainer/hostsvc-sensor-starter-plugin/: devcontainer.json
.devcontainer/platform-deployment-starter-plugin/: devcontainer.json
.devcontainer/platform-mts-starter-plugin/: devcontainer.json
.devcontainer/plugins-cpp-hostsvc-sensor/: devcontainer.json
.devcontainer/plugins-starter-vth/: devcontainer.json
.github/: CODEOWNERS
docs/: getting-started.md  table-of-contents.md  table_of_contents.md
samples/payloadapps/python/imagin-e-app/: .dockerignore  .gitignore  README.md  pyproject.toml
samples/payloadapps/python/imagin-e-app/configs/prod/: sensor-config-prod.json
samples/payloadapps/python/imagin-e-app/configs/test/: sensor-config-file.json  sensor-config-test.json
samples/payloadapps/python/imagin-e-app/docker/: Dockerfile.prod
samples/payloadapps/python/imagin-e-app/schedules/debug_image/: app-config.json  app-imagin-e-starter.json  app-imagin-e-starter.yaml
samples/payloadapps/python/imagin-e-app/schedules/prod/: app-config.json  app-imagin-e-starter.yaml
samples/payloadapps/python/imagin-e-app/schedules/test/: app-config.json
samples/payloadapps/python/imagin-e-app/src/app/: app_config.py  main.py  sensor_config.py  ship_detection.py
samples/plugins/hostsvc/hostsvc-sensor/cpp-sample-plugin/src/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  main.cpp
scripts/: create-app.sh
(+240 files in other folders)
